--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -1,4 +1,4 @@
-body, html {
+body.profile-body, html {
     height: 100%;
     margin: 0;
     overflow: auto;
